fixed scroll on mobile

--- a/styles/board_edit.css
+++ b/styles/board_edit.css
@@ -84,6 +84,7 @@
   background-color: white;
   border-radius: 30px;
   position: relative;
+  overflow-x: hidden;
 }
 
 #editTaskContainerInner {
@@ -276,15 +277,14 @@
 }
 
 #editTaskContainerEditDelete {
-  position: absolute;
-  bottom: 40px;
-  right: 50px;
-  width: 100px;
+  position: relative;
+  width: 100%;
   height: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   cursor: pointer;
+  /* padding-bottom: 15px; */
 }
 
 #editTaskContainerDelete {
